--- a/eval.tex
+++ b/eval.tex
@@ -81,7 +81,7 @@ To this end, we can extend the refinement type system by allowing refinement typ
 We do not need to identify a particular component function since we are only interested in size based refinement types.
 We then apply a similar refinement type inference strategy as in Listing \ref{exRTypeGen} to these examples.
 
-Our current example generation tool uses QuickCheck to generate and apply many examples for higher order function Haskell~\ref{quickcheck}.
+Our current example generation tool uses QuickCheck to generate and apply many examples for higher order function Haskell\ref{quickcheck}.
 Of course, since \lhask/ supports so much of Haskell, this is not practically useful for us, but provides a prototype as a proof of concept.
 Imagining that we could not find a refinement type directly on map, we might use examples to infer a refinement type. Take the following code:
 
