--- a/problem.tex
+++ b/problem.tex
@@ -2,9 +2,8 @@
 \label{problem}
 
 
-Synthesizing correct programs is a well research problem, with a large body of work\cite{stuff}.
-However, if programming-by-example is to become a mainstream tool for programmers, the synthesized code must be easy for a human to read and modify. 
-The aim of \ourTool/ is to synthesize programs from examples that utilize user defined code.
+Synthesizing correct programs is a well researched problem; however, if programming-by-example is to become a mainstream tool for programmers, the synthesized code must be easy for a human to read and modify. 
+The aim of \ourTool/ is to synthesize programs from examples that utilize user defined code in a clear and concise.
 We focus particularly on data structure manipulation problems that can be solved with higher order functions.
 
 \subsection{Example Syntax}
