--- a/myBib.bib
+++ b/myBib.bib
@@ -124,6 +124,26 @@
   year      = {2013}
 }
 
+@article{typeUnif,
+ author = {Cardelli, Luca},
+ title = {Basic Polymorphic Typechecking},
+ journal = {Sci. Comput. Program.},
+ issue_date = {April 1, 1987},
+ volume = {8},
+ number = {2},
+ month = apr,
+ year = {1987},
+ issn = {0167-6423},
+ pages = {147--172},
+ numpages = {26},
+ url = {http://dx.doi.org/10.1016/0167-6423(87)90019-0},
+ doi = {10.1016/0167-6423(87)90019-0},
+ acmid = {34882},
+ publisher = {Elsevier North-Holland, Inc.},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+} 
+
+
 @article{ dblp1683325,
   title = {Program Synthesis from Polymorphic Refinement Types},
   author = {Nadia Polikarpova and Armando Solar-Lezama},
@@ -141,8 +161,20 @@
 }
 
 @misc{GHC,
-  title = {GHC Base Prelude},
+  title = {ghc Base Prelude},
   howpublished = {\url{http://hackage.haskell.org/package/base-4.8.1.0/docs/src/Data.Foldable.html#concatMapm}},
+  note = {Accessed: 2015-11-15}
+}
+
+@misc{monoid,
+  title = {Base Libraries: Data.Monoid},
+  howpublished = {\url{https://hackage.haskell.org/package/base-4.8.1.0/docs/Data-Monoid.html}},
+  note = {Accessed: 2015-11-15}
+}
+
+@misc{quickcheck,
+  title = {QuickCheck},
+  howpublished = {\url{https://hackage.haskell.org/package/QuickCheck}},
   note = {Accessed: 2015-11-15}
 }
 
