--- a/conclusion.tex
+++ b/conclusion.tex
@@ -2,7 +2,6 @@
 \label{conclusions}
 Even for novice computer users, the need for basic programming skills is increasing. To meet this need, synthesis tools must be able to produce code that is not only correct, but also useful to the users of these tools. Program synthesis is powerful, but much of this power is left untapped when results are obfuscated by level upon level of folds, filters, and maps. Correctness is only a baseline, if program synthesizers do not produce natural code, most will not be able to take full advantage of this field.
 
-There are many directions left to explore. Integrating an example-aware first-order function synthesis procedure is a clear next step, and enhancing our refinement type inference from examples will allow greater search space pruning for practical efficiency benefits. Finally, our evaluation suggests that our tool would integrate well into a live programming environment.
+There are many directions left to explore. Integrating an example-aware first-order function synthesis procedure is a clear next step, and enhancing our refinement type inference from examples will allow greater search space pruning for practical efficiency benefits. The offline / online structure of our algorithm allows novice users to interact with the useful synthesis part of our algorithm without dealing with the complicated refinement-type formulation of our search space pruning, so our tool would integrate well into a live programming environment.
 
-We believe our tool is a step in this direction. As we saw section \ref{evaluation}, we respond to synthesis queries with highly-readable, transparent, and ultimately natural functions that fit the examples provided. The offline / online structure of our algorithm allows novice users to interact with the useful synthesis part of our algorithm without dealing with the complicated refinement-type formulation of our search space pruning.
-
+Finally, as we saw section \ref{evaluation}, our tool responds to synthesis queries with highly-readable, transparent, and ultimately natural functions that fit the examples provided. We believe our tool is a step toward realizing a robust and accessible program synthesis system.
