--- a/main.tex
+++ b/main.tex
@@ -94,7 +94,7 @@ We present a new programming-by-example technique that efficiently synthesizes n
 
 The search works by \textit{dismantling} higher-order functions in order to deduce suitable refinement types. These refinement types are then used to prune the search space of possible higher-order functions for a given example set. Since refinement type under-approximate, we can apply Liquid Haskell to arbitrary syntax extensions while still preserving soundness.
 
-We evaluate an implementation of our tool against a large set of synthesis examples including lists, trees, maps, and specialized musical score data structures 
+We evaluate an implementation of our tool against a large set of synthesis examples including lists, trees, maps, and specialized musical score data structures. This evaluation demonstrates the scalability and versatility of this approach.
 \end{abstract}
 
 \input{intro}
