--- a/intro.tex
+++ b/intro.tex
@@ -1,12 +1,7 @@
 \section{Introduction} 
 \label{intro}
 
-% natural code
-Program synthesis is an active research direction~\cite{DBLP:journals/toplas/MannaW80, DBLP:journals/cacm/GulwaniHS12, 
-DBLP:conf/icfp/Bodik15, DBLP:conf/pldi/KuncakMPS10, DBLP:conf/aplas/Solar-Lezama09, DBLP:conf/pldi/SrivastavaGCF11}.
-The goal of program synthesis is to automatically derive code from a given specification.
-The derived code is correct by construction and it should make the programmer more productive.
-However, writing a complete specification of an entire program is often a more complex task than writing the corresponding code, even for very simple programs.
+Program synthesis is an active research direction~\cite{DBLP:journals/toplas/MannaW80, DBLP:journals/cacm/GulwaniHS12,DBLP:conf/icfp/Bodik15, DBLP:conf/pldi/KuncakMPS10, DBLP:conf/aplas/Solar-Lezama09, DBLP:conf/pldi/SrivastavaGCF11}. The goal of program synthesis is to automatically derive code from a given specification. The derived code is correct by construction and it should make the programmer more productive. However, writing a complete specification of an entire program is often a more complex task than writing the corresponding code, even for very simple programs.
 
 Programming by example~\cite{cypher93,lieberman01,synasc12} is a promising research direction that enables easy manipulation of data even for non-programmers~\cite{GulwaniHS12}. Recent work in this area has focused on manipulating fundamental data types such as strings~\cite{flashFillPOPL,vldb12,icml13}, lists~\cite{FeserCD15,Osera:2015} and numbers~\cite{cav12}. The success and impact of this line of work can be estimated from the fact that some of this technology ships as part of the popular FlashFill feature in Excel 2013~\cite{flashFillPOPL}.
  
@@ -82,11 +77,11 @@ The \codeinline{any (id)} solution would expected by Haskell programmer, where \
 The more novel solution returned by our natural synthesis is \codeinline{foldr1 (max)}, where \codeinline{max :: Ord a => a -> a -> a} will return the maximum element of the two inputs.
 By folding over the list, this solution program exploits the \codeinline{Enum} property of the Boolean type in Haskell in a way that provides insight into some core Haskell functions and types.
 
-In summary, our paper makes the following contributions:
+In summary, our paper presents the following contributions:
 
 \begin{enumerate}[topsep=0pt]
-\item Adding natural synthesis into a real language (Haskell) to support a programming by example system that generates simple and reusable code.
-\item Supporting user defined data types, first order functions, and higher order functions, as well as handling library imports to further support full integration into Haskell.
-\item Automatically inferring refinement types on user defined higher order functions to assist with pruning the search space of synthesis. We use multiple passes of type match ranking algorithm to sort, prune, and when needed expand, the search space.
-\item We present an evaluation of the performance of \ourTool/, as well as showing examples of the code that it can synthesize.
+\item A programming by example system for a real language (Haskell) that uses natural synthesis to generate simple, reusable code.
+\item Even-handed support for user-defined data types, first-order functions, and higher-order functions, as well as third-party libraries.
+\item A procedure to automatically find suitable refinement types for user-defined higher order functions to prune the search space for our synthesis procedure. Multiple passes of the type-match-ranking algorithm sort, shrink, and -- when needed -- expand the search space.
+\item An evaluation of the performance of \ourTool/, as well as  examples of the code that it can synthesize.
 \end{enumerate}
