--- a/intro.tex
+++ b/intro.tex
@@ -83,5 +83,5 @@ In summary, we present the following contributions:
 \item A programming by example system for a real language (Haskell) that uses natural synthesis to generate simple, reusable code.
 \item Uniform handling of user-defined data types, first-order functions, and higher-order functions, as well as third-party libraries.
 \item A procedure to automatically find suitable refinement types for user-defined higher order functions to prune the search space for our synthesis procedure. Multiple passes of the type-match-ranking algorithm sort, shrink, and -- when needed -- expand the search space.
-\item An evaluation of the performance of \ourTool/, as well as  examples of the code that it can synthesize. The benchmarks presented show our tool can generate a wide variety of code that mixes functions from multiple sources.
+\item An evaluation of the performance of \ourTool/, as well as  examples of the code that it can synthesize. The benchmarks presented show our tool can efficiently generate a wide variety of code that mixes functions from multiple sources.
 \end{enumerate}
