--- a/intro.tex
+++ b/intro.tex
@@ -1,39 +1,32 @@
 \section{Introduction} 
 \label{intro}
 
-Program synthesis is an active research direction~\cite{DBLP:journals/toplas/MannaW80, DBLP:journals/cacm/GulwaniHS12,DBLP:conf/icfp/Bodik15, DBLP:conf/pldi/KuncakMPS10, DBLP:conf/aplas/Solar-Lezama09, DBLP:conf/pldi/SrivastavaGCF11}. The goal of program synthesis is to automatically derive code from a given specification. The derived code is correct by construction and it should make the programmer more productive. However, writing a complete specification of an entire program is often a more complex task than writing the corresponding code, even for very simple programs.
+Program synthesis is an active research direction~\cite{DBLP:journals/toplas/MannaW80, DBLP:journals/cacm/GulwaniHS12,DBLP:conf/icfp/Bodik15, DBLP:conf/pldi/KuncakMPS10, DBLP:conf/aplas/Solar-Lezama09, DBLP:conf/pldi/SrivastavaGCF11}. that aims to automatically derive code from a given specification. This code is correct by construction and ideally would make a programmer more productive. Still, writing a complete specification of an entire program is often a more complex task than writing the corresponding code, even for very simple programs.
 
 Programming by example~\cite{cypher93,lieberman01,synasc12} is a promising research direction that enables easy manipulation of data even for non-programmers~\cite{GulwaniHS12}. Recent work in this area has focused on manipulating fundamental data types such as strings~\cite{flashFillPOPL,vldb12,icml13}, lists~\cite{FeserCD15,Osera:2015} and numbers~\cite{cav12}. The success and impact of this line of work can be estimated from the fact that some of this technology ships as part of the popular FlashFill feature in Excel 2013~\cite{flashFillPOPL}.
  
-Instead of writing code, the user provides a list of relevant examples and the synthesis tool automatically generates a program. 
-In this way, the examples can be seen as an easily readable and understandable specification. 
-In~\cite{Osera:2016}, the close connection between refinement types and examples is expounded through the lens of proof theory.
-Other works have explored further ramifications of the theory of programming by example\cite{Osera:2015,GulwaniHS12,synasc12}.
-These theoretical foundations give us the power and direction to begin to make programming by example a mainstream feature of fully featured languages.
+Instead of writing code, the user provides a list of relevant input/output examples and the synthesis tool automatically generates a program that fits. In this way, the examples can be seen as an easily readable and understandable specification. In~\cite{Osera:2016}, the close connection between refinement types and examples is expounded through the lens of proof theory. Other works have explored further ramifications of the theory behind programming by example\cite{Osera:2015, GulwaniHS12, synasc12}. These theoretical foundations give us the power and direction to begin to make programming by example a mainstream feature of fully featured languages.
 
-In order for programming by example to be useful in the context of a real language, synthesis cannot act as a closed system.
-Just as with code a user writes, the ability to reuse and edit synthesized code is an integral part of the programming process.
-Program synthesis does not inherently address the problem of code readability, often resulting in tools that produce something closer to an executable than the simple and stylistic code a human might write.
-Our goal is to synthesize code that can be naturally integrated into code written by a programmer.
-In this paper we introduce an approach called \textit{natural synthesis} that reaches beyond the goal of synthesizing correct code, and synthesizes code from examples that is natural and idiomatic to the language.
+In order for programming by example to be useful in the context of a real language, synthesis cannot act as a closed system. Just as with code a user writes, the ability to reuse and edit synthesized code is an integral part of the programming process. Program synthesis does not inherently address the problem of code readability, often resulting in tools that produce something closer to an executable than the simple and stylistic code a human might write. Thus, our goal is to synthesize snippets that can be naturally integrated into code written by a programmer. In this paper we introduce an approach called \textit{natural synthesis} that aspires to synthesize code that is not only correct, but that is natural and idiomatic to the language.
 
-There is no formal definition of natural synthesis, but we take it to mean the task of synthesizing programs from a specification, with the explicit purpose of finding programs that are not only correct to the specification, but also comprehensible. The ideal natural synthesis procedure could pass something of a Turing test for writing code. A human inspecting the generated code should be able to understand it as easily as human written code.
+Thought there is no formal definition of natural synthesis, we take it to mean the task of synthesizing programs from a specification, with the explicit purpose of finding programs that are both correct to the specification and comprehensible. The ideal natural synthesis procedure could pass something of a Turing test for writing code. A human inspecting the generated code should be able to understand it as easily as if it were written by a human.
 
-Take the simple task of synthesizing a list flattening function from examples. 
-Synthesis approaches that use only the primitive recursive operators~\cite{Osera:2015,FeserCD15}, would find a function similar to \codeinline{solution1} in Listing \ref{natSyn}.
-Our tool instead focuses on actually utilizing these library functions (solution2).
+Take the simple task of synthesizing a list flattening function from examples.  Synthesis approaches that use only the primitive recursive operators~\cite{Osera:2015,FeserCD15}, would find a function similar to \codeinline{solution1} in Listing \ref{natSyn}. Our tool instead focuses on actually utilizing common library functions. The results of this approach can be seen just below in \codeinline{solution2}.
 
-\begin{lstlisting}[caption=Low-level synthesis vs. Natural synthesis,label=natSyn]
-[[1,2],[3,4]] :-> [1,2,3,4]
+\begin{figure}
+  \begin{lstlisting}[caption=Low-level synthesis vs. Natural synthesis,label=natSyn]
+    [[1,2],[3,4]] :-> [1,2,3,4]
+    
+    solution1 xs = 
+      (\c n -> foldr 
+          (\x b -> foldr c b (id x))
+          n xs) (:) []
+          
+    solution2 xs = concatMap id xs
+    \end{lstlisting}
+\end{figure}
 
-solution1 xs = 
-  (\c n -> foldr 
-      (\x b -> foldr c b (id x))
-      n xs) (:) []
-      
-solution2 xs =
-  concatMap id xs
-\end{lstlisting}
+
 
 \noindent In fact, \codeinline{solution1} is an application of the GHC\cite{ghc} implementation of concatMap. To synthesize this solution using only the core higher order functions is certainly motivating, however a user would likely prefer to see a higher order-function \codeinline{concatMap}, which exists in a standard library, if using synthesis with the goal of writing their own code.
 
